# Powershell-interpreter-in-Rust

./: .gitignore  Cargo.toml  DEFERRED_FEATURES.md  INVESTIGATION.md  NEXT_STEPS.md  PHASE_0_SUMMARY.md  PHASE_3_COMPLETE.md  QUICKSTART.md  README.md  RECENT_IMPLEMENTATIONS.md  ROADMAP.md  SUMMARY.md  TECHNICAL_DESIGN.md  TECHNOLOGY_COMPARISON.md  WEEK_10_SUMMARY.md  WEEK_11_SUMMARY.md  WEEK_12_SUMMARY.md  WEEK_13_SUMMARY.md  WEEK_14_SUMMARY.md  WEEK_5_SUMMARY.md  WEEK_6_DELIVERABLES.md  WEEK_6_SUMMARY.md  WEEK_7_SUMMARY.md  WEEK_8_SUMMARY.md  WEEK_9_SUMMARY.md
.github/workflows/: ci.yml
crates/pwsh-cli/: Cargo.toml
crates/pwsh-cli/src/: main.rs
crates/pwsh-cmdlets/: Cargo.toml  README.md
crates/pwsh-cmdlets/src/: foreach_object.rs  get_childitem.rs  get_content.rs  get_process.rs  group_object.rs  lib.rs  new_item.rs  remove_item.rs  select_object.rs  set_content.rs  sort_object.rs  test_path.rs  where_object.rs  write_output.rs
crates/pwsh-cmdlets/tests/: integration_tests.rs  issue_verification.rs  manual_verification.rs  test_select_issue.rs
crates/pwsh-lexer/: Cargo.toml  README.md
crates/pwsh-lexer/src/: lexer.rs  lib.rs  token.rs
crates/pwsh-lexer/tests/: lexer_tests.rs
crates/pwsh-parser/: Cargo.toml
crates/pwsh-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/pwsh-parser/tests/: parser_tests.rs
crates/pwsh-runtime/: Cargo.toml  README.md
crates/pwsh-runtime/src/: cmdlet.rs  error.rs  evaluator.rs  lib.rs  pipeline.rs  scope.rs  value.rs
examples/: basic_syntax.ps1  control_flow.ps1  pipeline.ps1  string_interpolation.ps1  week10_object_system.ps1  week11_script_blocks.ps1  week12_select_object.ps1  week13_foreach_object.ps1  week14_complete_pipeline.ps1  week15_get_childitem.ps1  week16_get_content.ps1  week17_group_object.ps1  week17_sort_object.ps1  week5_success_criteria.ps1  week6_success_criteria.ps1  week7_functions.ps1  week8_scoping.ps1  week9_script_blocks.ps1
