[workspace]
resolver = "2"
members = [
    "crates/pwsh-lexer",
    "crates/pwsh-parser",
    "crates/pwsh-runtime",
    "crates/pwsh-cmdlets",
    "crates/pwsh-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
authors = ["PowerShell Interpreter Team"]
license = "MIT"
repository = "https://github.com/dfinke/Powershell---interpreter"

[workspace.dependencies]
# Common dependencies across workspace
