[package]
name = "pwsh-cli"
version = "0.1.0"
edition = "2021"
authors = ["PowerShell Interpreter Team"]
license = "MIT"
repository = "https://github.com/dfinke/Powershell-interpreter-in-Rust"

[[bin]]
name = "pwsh"
path = "src/main.rs"

[dependencies]
pwsh-lexer = { path = "../pwsh-lexer" }
pwsh-parser = { path = "../pwsh-parser" }
pwsh-runtime = { path = "../pwsh-runtime" }
pwsh-cmdlets = { path = "../pwsh-cmdlets" }

[dev-dependencies]
