[package]
name = "pwsh-cmdlets"
version = "0.1.0"
edition = "2021"
authors = ["PowerShell Interpreter Team"]
license = "MIT"
repository = "https://github.com/dfinke/Powershell-interpreter-in-Rust"

[lib]
name = "pwsh_cmdlets"
path = "src/lib.rs"

[dependencies]
pwsh-runtime = { path = "../pwsh-runtime" }

[dev-dependencies]
