[package]
name = "pwsh-cmdlets"
version = "0.1.0"
edition = "2021"
authors = ["PowerShell Interpreter Team"]
license = "MIT"
repository = "https://github.com/dfinke/Powershell-interpreter-in-Rust"

[lib]
name = "pwsh_cmdlets"
path = "src/lib.rs"

[dependencies]
pwsh-runtime = { path = "../pwsh-runtime" }
encoding_rs = "0.8"
encoding_rs_io = "0.1"

[dev-dependencies]
pwsh-lexer = { path = "../pwsh-lexer" }
pwsh-parser = { path = "../pwsh-parser" }
tempfile = "3.8"
