[package]
name = "pwsh-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pwsh_parser"
path = "src/lib.rs"

[dependencies]
pwsh-lexer = { path = "../pwsh-lexer" }

[dev-dependencies]
