[package]
name = "pwsh-parser"
version = "0.1.0"
edition = "2021"
authors = ["PowerShell Interpreter Team"]
license = "MIT"
repository = "https://github.com/dfinke/Powershell-interpreter-in-Rust"

[lib]
name = "pwsh_parser"
path = "src/lib.rs"

[dependencies]
pwsh-lexer = { path = "../pwsh-lexer" }

[dev-dependencies]
