[package]
name = "pwsh-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pwsh_runtime"
path = "src/lib.rs"

[dependencies]
pwsh-parser = { path = "../pwsh-parser" }

[dev-dependencies]
pwsh-lexer = { path = "../pwsh-lexer" }
