[package]
name = "pwsh-runtime"
version = "0.1.0"
edition = "2021"
authors = ["PowerShell Interpreter Team"]
license = "MIT"
repository = "https://github.com/dfinke/Powershell-interpreter-in-Rust"

[lib]
name = "pwsh_runtime"
path = "src/lib.rs"

[dependencies]
pwsh-parser = { path = "../pwsh-parser" }

[dev-dependencies]
pwsh-lexer = { path = "../pwsh-lexer" }
